# firmware-common

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  README.org  amazon-build  decode-calls.py  fk.py  test
core/: CMakeLists.txt  arduino-libraries  board_definition.cpp  config.h.template  dependencies.sd  flash_with_bootloader_and_noinit.ld  main.cpp  samd21x18_bootloader_large.ld
doc/: device.dot
module/: CMakeLists.txt  arduino-libraries  dependencies.sd  example_module.cpp  example_module.h  main.cpp
modules/: comms.cpp  debug.cpp  debug.h  fk-module.cpp  fk-module.h  general.h  module.cpp  module.h  pool.cpp  pool.h  protobuf.cpp  protobuf.h  readings.h
src/: active_object.cpp  active_object.h  api_connection.cpp  api_connection.h  api_states.cpp  api_states.h  app_controller.cpp  app_controller.h  app_messages.cpp  app_messages.h  app_module_query_task.cpp  app_module_query_task.h  app_servicer.cpp  app_servicer.h  asf.h  attached_devices.cpp  attached_devices.h  begin_gather_readings.cpp  buffers.h  check_firmware.cpp  check_firmware.h  check_power.cpp  check_power.h  checksum_streams.cpp  checksums.h  comms.cpp  comms.h  copy_module_data.cpp  core.cpp  core.h  core_fsm.cpp  core_fsm.h  core_fsm_states.cpp  core_fsm_states.h  core_module.cpp  core_module.h  core_state.cpp  core_state.h  data_messages.cpp  data_messages.h  (+170 more)
src/common/: app_messages.h  board.cpp  board.h  checksum_streams.h  checksums.cpp  common_configuration.h  debug.cpp  debug.h  delay.h  fieldkit.h  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h  firmware_storage.cpp  firmware_storage.h  flash_reader.cpp  flash_reader.h  flash_storage.cpp  flash_storage.h  hardware.cpp  hardware.h  leds.cpp  leds.h  message_buffer.cpp  message_buffer.h  module_copy_settings.h  module_info.h  module_messages.h  network_settings.h  performance.cpp  peripherals.h  platform.cpp  platform.h  pool.cpp  pool.h  protobuf.cpp  protobuf.h  restart_wizard.cpp  restart_wizard.h  (+13 more)
src/core/: api_connection.cpp  app_messages.cpp  app_messages.h  app_module_query_task.h  app_servicer.cpp  app_servicer.h  attached_devices.cpp  attached_devices.h  battery_gauge.cpp  battery_gauge.h  begin_gather_readings.cpp  begin_gather_readings.h  board_definition.cpp  board_definition.h  booting.cpp  booting.h  check_firmware.cpp  check_firmware.h  check_power.cpp  configuration.cpp  configuration.h  copy_module_data.cpp  copy_module_data.h  core_board.cpp  core_board.h  core_fsm.cpp  core_fsm.h  core_module.cpp  core_module.h  core_state.cpp  core_state.h  data_copy_settings.h  data_logging.cpp  data_logging.h  data_messages.cpp  data_messages.h  data_replies.cpp  data_replies.h  device_id.cpp  device_id.h  (+111 more)
src/modules/: configuration.h  configure.cpp  configure.h  fk-module.h  hardware.cpp  hardware.h  module.cpp  module.h  module_callbacks.h  module_firmware_self_flash.cpp  module_fsm.cpp  module_fsm.h  module_idle.cpp  module_receive_data.cpp  module_receive_data.h  module_servicer.cpp  module_servicer.h  pending_readings.cpp  pending_readings.h  reboot_device.cpp  reboot_device.h  startup.cpp  startup.h  two_wire_child.cpp  two_wire_child.h
test/: CMakeLists.txt
test/linux/: CMakeLists.txt
test/linux/testcommon/: CMakeLists.txt  arduino-libraries  dependencies.sd  main.cpp  test_http_parsing.cpp  test_pool.cpp  test_status.cpp  test_status.h  test_streams.cpp  test_streams.h  test_watchdog.cpp  test_watchdog.h
test/linux/testhal/: Arduino.h  SerialFlash.h  Wire.h  hal.cpp
test/mcu/: CMakeLists.txt  arduino-libraries  dependencies.sd  main.cpp
tools/: set-config.sh
