include(Arduino)

enable_arduino_toolchain()

set(sources ${COMMON_SOURCE_FILES} main.cpp example_module.cpp)

find_package(arduino-logging)
find_package(Wire)
find_package(SPI)
find_package(phylum)
find_package(module-protocol)
find_package(app-protocol)
find_package(data-protocol)
find_package(simple-lora-comms)
find_package(lwstreams)
find_package(lwcron)
find_package(nanopb)
find_package(RTCZero)
find_package(RTClib)
find_package(WiFi101)
find_package(RadioHead)
find_package(Adafruit_ASFcore)
find_package(AtSamd)
find_package(FuelGauge)
find_package(TinyGPS)
find_package(arduino-base64)
find_package(SerialFlash)

add_definitions("-DFIRMWARE_GIT_HASH=\"${GIT_COMMIT_HASH}\"")
add_definitions("-DFIRMWARE_GIT_BRANCH=\"${GIT_BRANCH}\"")
add_definitions("-DFIRMWARE_BUILD=\"$ENV{BUILD_TAG}\"")

add_arduino_library(fk-testing-module-standard "${sources}")

target_link_libraries(fk-testing-module-standard Wire)
target_link_libraries(fk-testing-module-standard phylum)
target_link_libraries(fk-testing-module-standard module-protocol)
target_link_libraries(fk-testing-module-standard app-protocol)
target_link_libraries(fk-testing-module-standard data-protocol)
target_link_libraries(fk-testing-module-standard simple-lora-comms)
target_link_libraries(fk-testing-module-standard lwstreams)
target_link_libraries(fk-testing-module-standard lwcron)
target_link_libraries(fk-testing-module-standard nanopb)
target_link_libraries(fk-testing-module-standard RTCZero)
target_link_libraries(fk-testing-module-standard RTClib)
target_link_libraries(fk-testing-module-standard WiFi101)
target_link_libraries(fk-testing-module-standard RadioHead)
target_link_libraries(fk-testing-module-standard Adafruit_ASFcore)
target_link_libraries(fk-testing-module-standard AtSamd)
target_link_libraries(fk-testing-module-standard FuelGauge)
target_link_libraries(fk-testing-module-standard TinyGPS)
target_link_libraries(fk-testing-module-standard arduino-base64)
target_link_libraries(fk-testing-module-standard SerialFlash)
target_link_libraries(fk-testing-module-standard arduino-logging)
target_link_libraries(fk-testing-module-standard SPI)

add_arduino_firmware(fk-testing-module-standard)
