include(Arduino)

enable_arduino_toolchain()

set(sources ${COMMON_SOURCE_FILES} main.cpp)

add_arduino_library(fk-tests "${sources}")

find_package(arduino-logging)
find_package(Wire)
find_package(SPI)
find_package(phylum)
find_package(module-protocol)
find_package(app-protocol)
find_package(data-protocol)
find_package(simple-lora-comms)
find_package(lwstreams)
find_package(lwcron)
find_package(nanopb)
find_package(RTCZero)
find_package(RTClib)
find_package(WiFi101)
find_package(RadioHead)
find_package(Adafruit_ASFcore)
find_package(AtSamd)
find_package(FuelGauge)
find_package(TinyGPS)
find_package(arduino-base64)
find_package(SerialFlash)

target_link_libraries(fk-tests arduino-logging)
target_link_libraries(fk-tests Wire)
target_link_libraries(fk-tests SPI)
target_link_libraries(fk-tests phylum)
target_link_libraries(fk-tests module-protocol)
target_link_libraries(fk-tests app-protocol)
target_link_libraries(fk-tests data-protocol)
target_link_libraries(fk-tests simple-lora-comms)
target_link_libraries(fk-tests lwstreams)
target_link_libraries(fk-tests lwcron)
target_link_libraries(fk-tests nanopb)
target_link_libraries(fk-tests RTCZero)
target_link_libraries(fk-tests RTClib)
target_link_libraries(fk-tests WiFi101)
target_link_libraries(fk-tests RadioHead)
target_link_libraries(fk-tests Adafruit_ASFcore)
target_link_libraries(fk-tests AtSamd)
target_link_libraries(fk-tests FuelGauge)
target_link_libraries(fk-tests TinyGPS)
target_link_libraries(fk-tests arduino-base64)
target_link_libraries(fk-tests SerialFlash)

add_arduino_firmware(fk-tests)
